added tests for the form

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <label for="form-text">Message</label>
       <textarea id="form-text" rows="4" ></textarea>
       
-      <input id="form-btn" type="submit">
+      <input id="form-btn" type="submit" value="Send">
     </form>
   </main>
 </body>
