Added the background to the Card

--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
   <title>Document</title>
 </head>
 <body>
-  <header>Fill the form</header>
+  <header><h1>Digital Postcard</h1></header>
   <main>
     <form id="form-id">
-      <label for="greeting">Name</label>
+      <label for="form-name">Name</label>
       <input id="form-name" type="text" palceholder="Name">
 
       <label for="event">Event</label>
       <select name="event" id="event">
-        <option value="birthday">Birthday</option>
+        <option value="Birthday">Birthday</option>
         <option value="Holiday">Holiday</option>
-        <option value="xmas">Christmas</option>
+        <option value="Christmas">Christmas</option>
       </select>
 
       <label for="form-text">Message</label>
